src/test/resources/integration-test/arrays/mixed-array.expect

An error occurred:
mixed-array.twl
Error at line 6 character 8.
Invalid type for array. Expected num, received str.
