src/test/resources/integration-test/arrays/mixed-array.twl

import <arrays>

[] 5 arrays.push

"test" arrays.push